--- a/predict.ipynb
+++ b/predict.ipynb
@@ -6,7 +6,7 @@
       "name": "predict.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN64c1n7fywOWgG5CgHm6b3",
+      "authorship_tag": "ABX9TyOntg4KLZMJYL5V/W/tb58F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,11 +31,7 @@
       "metadata": {
         "id": "dl3YCdfsEDDu",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 80
-        },
-        "outputId": "689eb65c-fe6e-4921-c119-97107071e7e7"
+        "colab": {}
       },
       "source": [
         "import keras\n",
@@ -46,45 +42,19 @@
         "from keras.models import Model\n",
         "from keras.optimizers import Adam"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<p style=\"color: red;\">\n",
-              "The default version of TensorFlow in Colab will soon switch to TensorFlow 2.x.<br>\n",
-              "We recommend you <a href=\"https://www.tensorflow.org/guide/migrate\" target=\"_blank\">upgrade</a> now \n",
-              "or ensure your notebook will continue to use TensorFlow 1.x via the <code>%tensorflow_version 1.x</code> magic:\n",
-              "<a href=\"https://colab.research.google.com/notebooks/tensorflow_version.ipynb\" target=\"_blank\">more info</a>.</p>\n"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "hM14_59NEzjL",
         "colab_type": "code",
+        "outputId": "0f433273-75e9-4138-9ac3-d90a3a804add",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 479
-        },
-        "outputId": "1109b184-8eff-4c93-a976-1a97820e7c04"
+          "height": 71
+        }
       },
       "source": [
         "base_model = MobileNet(weights = 'imagenet', include_top=False)\n",
@@ -96,26 +66,8 @@
         "\n",
         "model = Model(inputs = base_model.input, outputs = X)"
       ],
-      "execution_count": 3,
+      "execution_count": 22,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:66: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:541: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4432: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:190: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:197: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:203: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
-            "\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "stream",
           "text": [
@@ -123,24 +75,6 @@
             "  warnings.warn('`input_shape` is undefined or non-square, '\n"
           ],
           "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:207: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:216: The name tf.is_variable_initialized is deprecated. Please use tf.compat.v1.is_variable_initialized instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:223: The name tf.variables_initializer is deprecated. Please use tf.compat.v1.variables_initializer instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:2041: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:148: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
-            "\n",
-            "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.6/mobilenet_1_0_224_tf_no_top.h5\n",
-            "17227776/17225924 [==============================] - 0s 0us/step\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
@@ -149,22 +83,37 @@
       "metadata": {
         "id": "u-86Fb9oLARS",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "1c8d0a22-fc7a-41ad-a04e-be66164e775e"
       },
       "source": [
+        "!ls\n",
         "for layer in model.layers[:20]:\n",
         "    layer.trainable=False\n",
         "for layer in model.layers[20:]:\n",
         "    layer.trainable=True"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "adc.json    chest-xray-pneumonia.zip  sample_data\n",
+            "chest_xray  kaggle.json\t\t      xray.h5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "s-nxRAt9GCUa",
         "colab_type": "code",
+        "outputId": "6fb07dc4-db95-49c6-e334-b8264090f38f",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -182,14 +131,13 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 88
-        },
-        "outputId": "6fb07dc4-db95-49c6-e334-b8264090f38f"
+        }
       },
       "source": [
         "from google.colab import files\n",
         "files.upload()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -277,16 +225,16 @@
       "metadata": {
         "id": "GXpe5I-rH5sZ",
         "colab_type": "code",
+        "outputId": "029b2010-7875-43ff-fdd3-1d88b6409eec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "029b2010-7875-43ff-fdd3-1d88b6409eec"
+        }
       },
       "source": [
         "!kaggle datasets download -d paultimothymooney/chest-xray-pneumonia"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,16 +252,16 @@
       "metadata": {
         "id": "m8U-_eCeINGC",
         "colab_type": "code",
+        "outputId": "78c497db-f760-4aa4-e724-a7c73b986c73",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "78c497db-f760-4aa4-e724-a7c73b986c73"
+        }
       },
       "source": [
         "!unzip chest-xray-pneumonia.zip"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -17952,11 +17900,11 @@
       "metadata": {
         "id": "dBHgpUb0I2N_",
         "colab_type": "code",
+        "outputId": "8d0d2e7d-ce13-4af8-8dcf-586fd1b22226",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        },
-        "outputId": "a4648e31-0cbb-4c71-dee1-179ed7fb6842"
+        }
       },
       "source": [
         "train_image_gen = ImageDataGenerator(preprocessing_function=preprocess_input)\n",
@@ -17970,22 +17918,22 @@
         "                   steps_per_epoch=step_size_train,\n",
         "                   epochs=5)"
       ],
-      "execution_count": 15,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Found 5216 images belonging to 2 classes.\n",
             "Epoch 1/5\n",
-            "163/163 [==============================] - 58s 358ms/step - loss: 0.0455 - acc: 0.9893 - f1_m: 0.9893\n",
+            "163/163 [==============================] - 58s 359ms/step - loss: 0.0964 - acc: 0.9684 - f1_m: 0.9684\n",
             "Epoch 2/5\n",
-            "163/163 [==============================] - 56s 344ms/step - loss: 0.0268 - acc: 0.9912 - f1_m: 0.9912\n",
+            "163/163 [==============================] - 56s 343ms/step - loss: 0.0616 - acc: 0.9824 - f1_m: 0.9824\n",
             "Epoch 3/5\n",
-            "163/163 [==============================] - 57s 347ms/step - loss: 0.0275 - acc: 0.9921 - f1_m: 0.9921\n",
+            "163/163 [==============================] - 56s 344ms/step - loss: 0.0489 - acc: 0.9816 - f1_m: 0.9816\n",
             "Epoch 4/5\n",
-            "163/163 [==============================] - 56s 343ms/step - loss: 0.0155 - acc: 0.9962 - f1_m: 0.9962\n",
+            "163/163 [==============================] - 56s 342ms/step - loss: 0.0322 - acc: 0.9885 - f1_m: 0.9885\n",
             "Epoch 5/5\n",
-            "163/163 [==============================] - 56s 341ms/step - loss: 0.0290 - acc: 0.9898 - f1_m: 0.9898\n"
+            "163/163 [==============================] - 56s 344ms/step - loss: 0.0170 - acc: 0.9954 - f1_m: 0.9954\n"
           ],
           "name": "stdout"
         },
@@ -17993,13 +17941,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f520ee1d630>"
+              "<keras.callbacks.History at 0x7f521d4fde10>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 25
         }
       ]
     },
@@ -18057,16 +18005,16 @@
       "metadata": {
         "id": "tLeql9o4QOFY",
         "colab_type": "code",
+        "outputId": "1d26e6a0-65b4-425f-d8cf-b4e733dfcecc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1d26e6a0-65b4-425f-d8cf-b4e733dfcecc"
+        }
       },
       "source": [
         "drive.CreateFile({'id': model_file.get('id')})"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
